--- a/Cargo.toml
+++ b/Cargo.toml
@@ -21,4 +21,6 @@ tokio = { version = "1", features = ["macros"] }
 serde = { version = "1.0.210", features = ["derive"] }
 serde_json = "1.0.128"
 regex = "1.10.6"
+aws-sdk-dynamodb = "1.45.0"
+aws-config = "1.5.6"
 
