--- a/Cargo.toml
+++ b/Cargo.toml
@@ -23,4 +23,4 @@ serde_json = "1.0.128"
 regex = "1.10.6"
 aws-sdk-dynamodb = "1.45.0"
 aws-config = "1.5.6"
-
+uuid = { version = "1.10.0", features = ["v4"] }
