--- a/Cargo.toml
+++ b/Cargo.toml
@@ -24,3 +24,4 @@ regex = "1.10.6"
 aws-sdk-dynamodb = "1.45.0"
 aws-config = "1.5.6"
 uuid = { version = "1.10.0", features = ["v4"] }
+async-trait = "0.1.82"
