--- a/Cargo.toml
+++ b/Cargo.toml
@@ -25,3 +25,5 @@ aws-sdk-dynamodb = "1.45.0"
 aws-config = "1.5.6"
 uuid = { version = "1.10.0", features = ["v4"] }
 async-trait = "0.1.82"
+aws-sdk-sesv2 = "1.46.0"
+anyhow = "1.0.89"
