--- a/Cargo.toml
+++ b/Cargo.toml
@@ -27,3 +27,4 @@ uuid = { version = "1.10.0", features = ["v4"] }
 async-trait = "0.1.82"
 aws-sdk-sesv2 = "1.46.0"
 anyhow = "1.0.89"
+mail-builder = "0.3.2"
